// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skeleton circle skeleton 1`] = `
<div
  className="pf-c-skeleton pf-m-circle"
/>
`;

exports[`skeleton default 1`] = `
<div
  className="pf-c-skeleton"
/>
`;

exports[`skeleton rectangle skeleton 1`] = `
<div
  className="pf-c-skeleton pf-m-width-md pf-m-height-sm"
/>
`;

exports[`skeleton rectangle skeleton 2`] = `
<div
  className="pf-c-skeleton pf-m-width-lg pf-m-height-md"
/>
`;

exports[`skeleton rectangle skeleton 3`] = `
<div
  className="pf-c-skeleton pf-m-height-lg"
/>
`;

exports[`skeleton shape skeleton with lg width 1`] = `
<div
  className="pf-c-skeleton pf-m-circle pf-m-width-lg"
/>
`;

exports[`skeleton shape skeleton with lg width 2`] = `
<div
  className="pf-c-skeleton pf-m-square pf-m-width-lg"
/>
`;

exports[`skeleton shape skeleton with md width 1`] = `
<div
  className="pf-c-skeleton pf-m-circle pf-m-width-md"
/>
`;

exports[`skeleton shape skeleton with md width 2`] = `
<div
  className="pf-c-skeleton pf-m-square pf-m-width-md"
/>
`;

exports[`skeleton shape skeleton with sm width 1`] = `
<div
  className="pf-c-skeleton pf-m-circle pf-m-width-sm"
/>
`;

exports[`skeleton shape skeleton with sm width 2`] = `
<div
  className="pf-c-skeleton pf-m-square pf-m-width-sm"
/>
`;

exports[`skeleton skeleton with 2xl font size 1`] = `
<div
  className="pf-c-skeleton pf-m-text-2xl"
/>
`;

exports[`skeleton skeleton with 3xl font size 1`] = `
<div
  className="pf-c-skeleton pf-m-text-3xl"
/>
`;

exports[`skeleton skeleton with 4xl font size 1`] = `
<div
  className="pf-c-skeleton pf-m-text-4xl"
/>
`;

exports[`skeleton skeleton with 25 height 1`] = `
<div
  className="pf-c-skeleton pf-m-height-25"
/>
`;

exports[`skeleton skeleton with 25 width 1`] = `
<div
  className="pf-c-skeleton pf-m-width-25"
/>
`;

exports[`skeleton skeleton with 33 height 1`] = `
<div
  className="pf-c-skeleton pf-m-height-33"
/>
`;

exports[`skeleton skeleton with 33 width 1`] = `
<div
  className="pf-c-skeleton pf-m-width-33"
/>
`;

exports[`skeleton skeleton with 50 height 1`] = `
<div
  className="pf-c-skeleton pf-m-height-50"
/>
`;

exports[`skeleton skeleton with 50 width 1`] = `
<div
  className="pf-c-skeleton pf-m-width-50"
/>
`;

exports[`skeleton skeleton with 66 height 1`] = `
<div
  className="pf-c-skeleton pf-m-height-66"
/>
`;

exports[`skeleton skeleton with 66 width 1`] = `
<div
  className="pf-c-skeleton pf-m-width-66"
/>
`;

exports[`skeleton skeleton with 75 height 1`] = `
<div
  className="pf-c-skeleton pf-m-height-75"
/>
`;

exports[`skeleton skeleton with 75 width 1`] = `
<div
  className="pf-c-skeleton pf-m-width-75"
/>
`;

exports[`skeleton skeleton with 100 height 1`] = `
<div
  className="pf-c-skeleton pf-m-height-100"
/>
`;

exports[`skeleton skeleton with lg font size 1`] = `
<div
  className="pf-c-skeleton pf-m-text-lg"
/>
`;

exports[`skeleton skeleton with md font size 1`] = `
<div
  className="pf-c-skeleton pf-m-text-md"
/>
`;

exports[`skeleton skeleton with sm font size 1`] = `
<div
  className="pf-c-skeleton pf-m-text-sm"
/>
`;

exports[`skeleton skeleton with xl font size 1`] = `
<div
  className="pf-c-skeleton pf-m-text-xl"
/>
`;

exports[`skeleton square skeleton 1`] = `
<div
  className="pf-c-skeleton pf-m-square"
/>
`;
